Remove php-pecl-xdebug

--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -10,7 +10,7 @@ RUN set -x; \
 		yum-utils
 RUN yum-config-manager --enable remi-php74
 RUN yum -y update
-RUN yum -y install php php-cli php-mysqlnd php-gd php-mbstring php-xml php-intl php-opcache php-pecl-apcu php-redis php-pecl-xdebug \
+RUN yum -y install php php-cli php-mysqlnd php-gd php-mbstring php-xml php-intl php-opcache php-pecl-apcu php-redis \
 		git composer mysql wget unzip imagemagick python-pygments ssmtp
 
 RUN sed -i '/<Directory "\/var\/www\/html">/,/<\/Directory>/ s/AllowOverride None/AllowOverride All/' /etc/httpd/conf/httpd.conf
