--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: '2'
 services:
     db:
         image: pastakhov/mysql:5.7
+        restart: unless-stopped
         environment:
             - MYSQL_ROOT_HOST=%
             - MYSQL_ROOT_PASSWORD=$MW_DB_INSTALLDB_PASS
@@ -14,6 +15,7 @@ services:
         build:
             context: ./web
             dockerfile: Dockerfile
+        restart: unless-stopped
 #        ports:
 #            - "8081:80"
         links:
@@ -58,6 +60,7 @@ services:
 
     redis:
         image: "redis:alpine"
+        restart: unless-stopped
         volumes:
             - ./_data/redis:/data
 #            - ./_resources/redis.conf:/usr/local/etc/redis/redis.conf
