--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,8 +16,8 @@ services:
             context: ./web
             dockerfile: Dockerfile
         restart: unless-stopped
-#        ports:
-#            - "8081:80"
+        ports:
+            - "8081:80"
         links:
             - db
             - redis
