--- a/.env_example
+++ b/.env_example
@@ -9,3 +9,6 @@ MW_DB_INSTALLDB_PASS=
 # This user will be created if the database will be initialized from scratch
 MW_ADMIN_USER=
 MW_ADMIN_PASS=
+
+PORT=
+MW_SITE_SERVER=
