--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
             - ./_data/mysql:/var/lib/mysql
 
     web:
-        image: ghcr.io/wikiteq/mediawiki:1.35.2-20210707-7679528
+        image: ghcr.io/wikiteq/mediawiki:1.35.3-20210713-61
         restart: unless-stopped
         ports:
             - "${PORT:-8081}:80"
