--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -79,12 +79,16 @@ services:
 #            - ./_resources/redis.conf:/usr/local/etc/redis/redis.conf
 
     elasticsearch:
-        image: docker.elastic.co/elasticsearch/elasticsearch:6.8.13
+        image: docker.elastic.co/elasticsearch/elasticsearch:6.8.23
         restart: unless-stopped
         environment:
             - discovery.type=single-node
             - bootstrap.memory_lock=true
             - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+            - cluster.routing.allocation.disk.threshold_enabled=true
+            - cluster.routing.allocation.disk.watermark.flood_stage=1gb
+            - cluster.routing.allocation.disk.watermark.high=2gb
+            - cluster.routing.allocation.disk.watermark.low=3gb
         ulimits:
             memlock:
                 soft: -1
